tests/rosetta/out/Smalltalk/arithmetic-geometric-mean-calculate-pi.out
/tmp/arithmetic-geometric-mean-calculate-pi.st:6: parse error, expected integer literal or floating-point literal or decimal literal
