tests/rosetta/out/Smalltalk/arithmetic-geometric-mean-calculate-pi.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| abs sqrtApprox guess i agmPi a g sum pow t u diff pi main |
abs := [:x | ((x < 0)) ifTrue: [
-x.
] .
x. ].
sqrtApprox := [:x | guess := x.
i := 0.
[(i < 20)] whileTrue: [.
guess := (((guess + ((x / guess)))) / 2).
i := (i + 1).
].
.
guess. ].
agmPi := [ a := 1.
g := (1 / (sqrtApprox value: 2)).
sum := 0.
pow := 2.
[((abs value: (a - g)) > 1e-15)] whileTrue: [.
t := (((a + g)) / 2).
u := sqrtApprox value: (a * g).
a := t.
g := u.
pow := (pow * 2).
diff := (((a * a)) - ((g * g))).
sum := (sum + ((diff * pow))).
].
.
pi := (((((4 * a)) * a)) / ((1 - sum))).
pi. ].
main := [ Transcript show: ((agmPi value asString)) printString; cr. ].
main value.
